--- a/plugin.xml
+++ b/plugin.xml
@@ -34,8 +34,8 @@
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest">
-      <uses-feature android:name="android.hardware.camera" android:required="true"/>
-      <uses-feature android:name="android.hardware.camera.autofocus" />
+      <uses-feature android:name="android.hardware.camera" android:required="true" />
+      <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
       <uses-permission android:name="android.permission.CAMERA" />
     </config-file>
 
